--- a/index.html
+++ b/index.html
@@ -18,5 +18,25 @@
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Social links profile</title>
   </head>
-  <body></body>
+  <body class="bg-offBlack px-1.6 text-white flex items-center h-[100vh]">
+    <div
+      class="bg-darkGrey max-w-sm mx-auto px-2.4 py-2.4 rounded-xl shadow-md"
+    >
+      <img
+        class="rounded-full w-9.6 mx-auto"
+        src="./imgs/avatar-jessica.jpeg"
+        alt="avatar of jessica"
+      />
+      <h3 class="text-center text-2.4 mt-2.4 font-semibold">Jessica Randall</h3>
+      <p class="text-green text-center">London, United Kingdom</p>
+      <p class="text-center mt-3.2">"Front-end developer and avid reader."</p>
+      <div class="flex flex-col gap-1.6 mt-2.4">
+        <a href="#" class="btn-primary">GitHub</a>
+        <a href="#" class="btn-primary">Frontend Mentor</a>
+        <a href="#" class="btn-primary">LinkedIn</a>
+        <a href="#" class="btn-primary">Twitter</a>
+        <a href="#" class="btn-primary">Instagram</a>
+      </div>
+    </div>
+  </body>
 </html>
